# zion

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  prettier.config.js  tsconfig.json  turbo.json
crates/swc-ast-derive/: Cargo.toml  README.md
crates/swc-ast-derive/src/: lib.rs
crates/swc-ast-derive/tests/: derive.rs
crates/swc-ast-trait/: Cargo.toml  README.md
crates/swc-ast-trait/src/: lib.rs
crates/swc-helpers/: Cargo.toml  README.md
crates/swc-helpers/src/: lib.rs
crates/swc-plugin-zion/: Cargo.toml  package.json
crates/swc-plugin-zion/src/: coverage.rs  lib.rs  misc.rs
crates/swc-plugin-zion/src/ast/: mod.rs
crates/swc-plugin-zion/src/visitor/: mod.rs  pat_ident_access.rs  source.rs  test.rs
crates/swc-plugin-zion/src/vitest/: mod.rs  storage.rs  test.rs
crates/typegen-rs/: Cargo.toml  README.md  expand.rs  package.json
crates/typegen-rs/scripts/: build.ts
crates/typegen-rs/src/: lib.rs
examples/simple/: README.md  package.json  vitest.config.ts
examples/simple/src/: math.test.ts  math.ts
playground/: source.js  target.js
