[package]
name = "swc_plugin_zion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex-literal = "0.4.1"
random-string = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
swc_core = { version = "0.90.*", features = [
	"ecma_plugin_transform",
	"ecma_quote",
	"ecma_utils",
	"ecma_ast",
	"ecma_codegen",
	"ecma_parser",
] }
typegen_rs = { path = "../typegen-rs" }
swc_ast_trait = { path = "../swc-ast-trait" }
lazy_static = "1.4.0"
strum = "0.26.2"
strum_macros = "0.26.2"

[dev-dependencies]
insta = { version = "1.38.0", features = ["json"] }
